[workspace]
resolver = "2"
members = [
  # binaries
  "bin/brc20",

  # libraries
  # "lib/bitcoin",
]

[workspace.dependencies]
once_cell = "1.17.1"
thiserror = "1.0.38"
anyhow = "1.0.69"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_with = "2.3.2"
claims = "0.7.1"
chrono = { version = "0.4.24", features = ["serde"] }
async-trait = "0.1.68"
tokio = { version = " 1.25.0", features = ["full"]}
tokio-stream = "0.1.14"
stream-cancel = "0.8.1"
futures = "0.3.28"
dotenvy = "0.15.6"
derive_more = "0.99.17"
tracing = "0.1.37"
hashbrown = "0.13.2"
async-shutdown = "0.1.2"
bincode = "1.3.3"
strum = "0.24.1"
strum_macros = "0.24.1"
http = "0.2.9"
reqwest = "0.11.17"
cached = { version = "0.43.0", features = ["async"]}
derive_builder = "0.12.0"
lazy_static = "1.4.0"
